# wallhaven-desktop

./: CHANGELOG  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: notify.yml  package.yml  test.yml
asset/: wallhaven-desktop.desktop
src/: App.jsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmds.rs  init.rs  main.rs  system_tray.rs
src-tauri/src/utils/: mod.rs  set_wallpaper.rs  sys.rs
src-tauri/src/utils/setter/: cinnamon.rs  cutefish.rs  deepin.rs  gnome.rs  kde.rs  lxde.rs  lxqt.rs  macos.rs  mate.rs  mod.rs  windows.rs  xfce.rs  yoyo.rs
src/components/Filter/AtLeastFilter/: index.jsx
src/components/Filter/ColorFilter/: index.jsx
src/components/Filter/FilterBar/: index.jsx
src/components/Filter/KeywordsFilter/: index.jsx
src/components/Filter/PurityFilter/: index.jsx
src/components/Filter/RatiosFilter/: index.jsx
src/components/Filter/SortingFilter/: index.jsx
src/components/Filter/TypeFilter/: index.jsx
src/components/Image/ImageActions/: index.jsx
src/components/Image/ImageCard/: index.jsx
src/components/Image/ImageInfo/: ColorBar.jsx  TagsCloud.jsx  index.jsx
src/components/Image/ImageList/: index.jsx
src/components/Image/ImageViewer/: index.jsx  style.css
src/components/Setting/SettingItem/: index.jsx
src/components/Setting/SettingList/: index.jsx
src/components/TopBar/: index.jsx
src/pages/: Collections.jsx  Settings.jsx  Wallhaven.jsx
src/routes/: index.jsx
src/themes/: dark.js
src/utils/: config.js  settings.js
