[package]
name = "wallhaven-desktop"
version = "0.0.0"
description = "Unofficial desktop client for wallhaven.cc, which is used to easily browse wallhaven wallpapers and set them as desktop wallpapers with one click"
authors = ["ambition-echo"]
license = "GPLv3"
repository = "https://github.com/ambition-echo/wallhaven-desktop"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["clipboard-all", "dialog-open", "fs-all", "http-all", "shell-open", "system-tray"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows= {version="0.44.0",features= ["Win32_UI_Shell","Win32_System_Com"] }

[target.'cfg(target_os = "linux")'.dependencies ]
dbus = "0.9.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
